objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Tosca Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0 Active %28SQL%29</fullName>
        </values>
        <values>
            <fullName>1 Prospecting %28Discovering%2FIdentifying%29</fullName>
        </values>
        <values>
            <fullName>2 Qualification</fullName>
        </values>
        <values>
            <fullName>3 Evaluation</fullName>
        </values>
        <values>
            <fullName>4 Proposal</fullName>
        </values>
        <values>
            <fullName>5 Negotiation%2FClosing</fullName>
        </values>
        <values>
            <fullName>6 Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>6 Closed%2FPending</fullName>
        </values>
        <values>
            <fullName>6 Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV_in_Euro__c</fullName>
        <label>ACV in Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACV_mgmt_commit_in_Euro__c</fullName>
        <label>ACV mgmt commit in Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admin_comments__c</fullName>
        <description>to add comments like why Opps are created in such a late stage; only visible fpr Sytstem Administrators. On Sandeeps request (Aug 29th 2016) - jassa</description>
        <label>Admin comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>DR Formula: TODAY()- DATEVALUE(CreatedDate)
changed by bazwe on 25.10.2017 to cover CloseDate of Opp minus Creation Date
changed by Lister on 24.11.2017</description>
        <formula>IF (  
	OR (
		ISPICKVAL( StageName , &apos;6 Closed/Won&apos;) , 
		ISPICKVAL( StageName , &apos;6 Closed/Lost&apos;)
		),
	CloseDate - DATEVALUE(CreatedDate),
	TODAY()- DATEVALUE(CreatedDate)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_contract_value__c</fullName>
        <description>ACV</description>
        <inlineHelpText>default values perp/1yr/2yrs/3yrs [kEUR]
AMS: 75 / 100 / 75 / 50
APAC: 80 / 80 / 40 / 30
EMEA: 75 / 75 / 40 / 40</inlineHelpText>
        <label>Annual contract value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Avaloq</fullName>
                </value>
                <value>
                    <fullName>Finacle</fullName>
                </value>
                <value>
                    <fullName>MS Dynamics</fullName>
                </value>
                <value>
                    <fullName>Oracle E-Business Suite</fullName>
                </value>
                <value>
                    <fullName>Oracle HRMS</fullName>
                </value>
                <value>
                    <fullName>Oracle Peoplesoft</fullName>
                </value>
                <value>
                    <fullName>Oracle Siebel (Classic)</fullName>
                </value>
                <value>
                    <fullName>Oracle Siebel (Open UI)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Outsystems</fullName>
                </value>
                <value>
                    <fullName>Pega Systems</fullName>
                </value>
                <value>
                    <fullName>SAP (Classic)</fullName>
                </value>
                <value>
                    <fullName>SAP Business Client</fullName>
                </value>
                <value>
                    <fullName>SAP Concur</fullName>
                </value>
                <value>
                    <fullName>SAP Fiori</fullName>
                </value>
                <value>
                    <fullName>SAP Netweaver</fullName>
                </value>
                <value>
                    <fullName>SAP S/4 HANA</fullName>
                </value>
                <value>
                    <fullName>SAP SuccessFactor</fullName>
                </value>
                <value>
                    <fullName>Service Now</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>TCS BaNCS</fullName>
                </value>
                <value>
                    <fullName>TRAX</fullName>
                </value>
                <value>
                    <fullName>Desktop Apps / .NET</fullName>
                    <isActive>false</isActive>
                    <label>Desktop Apps / .NET</label>
                </value>
                <value>
                    <fullName>Desktop Apps / Java</fullName>
                    <isActive>false</isActive>
                    <label>Desktop Apps / Java</label>
                </value>
                <value>
                    <fullName>Legacy Apps</fullName>
                    <isActive>false</isActive>
                    <label>Legacy Apps</label>
                </value>
                <value>
                    <fullName>Modern Apps / Browser</fullName>
                    <isActive>false</isActive>
                    <label>Modern Apps / Browser</label>
                </value>
                <value>
                    <fullName>Modern Apps / Mobile+</fullName>
                    <isActive>false</isActive>
                    <label>Modern Apps / Mobile+</label>
                </value>
                <value>
                    <fullName>Packaged Apps / Avaloq</fullName>
                    <isActive>false</isActive>
                    <label>Packaged Apps / Avaloq</label>
                </value>
                <value>
                    <fullName>Packaged Apps / Finacle</fullName>
                    <isActive>false</isActive>
                    <label>Packaged Apps / Finacle</label>
                </value>
                <value>
                    <fullName>Packaged Apps / Pegasystems</fullName>
                    <isActive>false</isActive>
                    <label>Packaged Apps / Pegasystems</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field shall be used to identify the billing account (the account who is paying the invoice - can be different to the End customer or partner account).
Request: johko 26.01.2018 - to be used for SAP integration</description>
        <label>Billing Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.SAP_Debitor_ID__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bill To Opportunities</relationshipLabel>
        <relationshipName>billtoopportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BypassValidationForProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Process Builder &quot;Geo Update from Account&quot;, to prevent flow error</description>
        <label>BypassValidationForProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Quarter_Year__c</fullName>
        <formula>CASE(MONTH(CloseDate),
1,&quot;Q1&quot;,
2,&quot;Q1&quot;,
3,&quot;Q1&quot;,
4,&quot;Q2&quot;,
5,&quot;Q2&quot;,
6,&quot;Q2&quot;,
7,&quot;Q3&quot;,
8,&quot;Q3&quot;,
9,&quot;Q3&quot;,
10,&quot;Q4&quot;,
11,&quot;Q4&quot;,
12,&quot;Q4&quot;,&quot;&quot;)

&amp; &quot; - &quot; &amp;

TEXT(YEAR(CloseDate))</formula>
        <label>Close Quarter - Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Amount__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;6 Closed/Won&quot;), Annual_contract_value__c, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_PSO_Amount__c</fullName>
        <formula>IF(ISPICKVAL(StageName, &quot;6 Closed/Won&quot;), PSO_Amount__c , 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed PSO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <label>Closed/Won Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commit_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Tri_Forecast__c , &quot;Commit&quot;),  Normalized_ACV__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commit_PSO_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Tri_Forecast__c , &quot;Commit&quot;), PSO_Amount__c , 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commit PSO Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_Commission__c</fullName>
        <description>Shall be used to track the commission payout of a partner - predefined values do not apply - a custom input field is filled out, needed by FI. Request verba 26.01.2018</description>
        <label>Custom Commission %</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Attributed_to_DiscoverOrg__c</fullName>
        <formula>Account.DSCORGPKG__DiscoverOrg_First_Update__c  &lt;  CreatedDate</formula>
        <label>Attributed to DiscoverOrg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Converted_from_Discoverorg_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Discoverorg Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Buyer)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventbriteSync__EventbriteId__c</fullName>
        <label>Eventbrite Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <description>Created for reporting purpose - Weekly Metrics</description>
        <formula>CASE(MONTH(CloseDate),1,&quot;Q1&quot;,2,&quot;Q1&quot;,3,&quot;Q1&quot;,4,&quot;Q2&quot;,5,&quot;Q2&quot;,6,&quot;Q2&quot;,7,&quot;Q3&quot;,8,&quot;Q3&quot;,9,&quot;Q3&quot;,&quot;Q4&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Week__c</fullName>
        <formula>MOD(FLOOR( ( CloseDate - DATE(2006,01,01))/7),52)+1</formula>
        <label>Fiscal Week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked it means Services were included, but given for free</description>
        <label>Free Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <formula>TEXT(Account.geo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geoo__c</fullName>
        <label>new Geo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>GLOBAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Integrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Integrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISV_Lead_Source__c</fullName>
        <description>Should be used to track ISV activity</description>
        <label>ISV Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agosense</fullName>
                </value>
                <value>
                    <fullName>CloudMonkey Mobile</fullName>
                </value>
                <value>
                    <fullName>Infometis</fullName>
                </value>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>Jira</fullName>
                </value>
                <value>
                    <fullName>Johannes Spiessberger</fullName>
                </value>
                <value>
                    <fullName>Mobile Labs</fullName>
                </value>
                <value>
                    <fullName>Neotys</fullName>
                </value>
                <value>
                    <fullName>Polarion</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Tasktop</fullName>
                </value>
                <value>
                    <fullName>TRAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrations__c</fullName>
        <label>Integrations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Atlassian Jira</fullName>
                </value>
                <value>
                    <fullName>Bamboo</fullName>
                </value>
                <value>
                    <fullName>CA Agile Central (Rally)</fullName>
                </value>
                <value>
                    <fullName>Confluence</fullName>
                </value>
                <value>
                    <fullName>HP QC/ALM</fullName>
                </value>
                <value>
                    <fullName>Jenkins</fullName>
                </value>
                <value>
                    <fullName>MS TFS</fullName>
                </value>
                <value>
                    <fullName>NUnit</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Polarion</fullName>
                </value>
                <value>
                    <fullName>RevTrack</fullName>
                </value>
                <value>
                    <fullName>SAP Solution Manager</fullName>
                </value>
                <value>
                    <fullName>Selenium</fullName>
                </value>
                <value>
                    <fullName>ServiceNow</fullName>
                </value>
                <value>
                    <fullName>Team City</fullName>
                </value>
                <value>
                    <fullName>Tx3</fullName>
                </value>
                <value>
                    <fullName>Valgenesis</fullName>
                </value>
                <value>
                    <fullName>Integrations / CI</fullName>
                    <isActive>false</isActive>
                    <label>Integrations / CI</label>
                </value>
                <value>
                    <fullName>Integrations / HP QC</fullName>
                    <isActive>false</isActive>
                    <label>Integrations / HP QC</label>
                </value>
                <value>
                    <fullName>Integrations / Polarion</fullName>
                    <isActive>false</isActive>
                    <label>Integrations / Polarion</label>
                </value>
                <value>
                    <fullName>Integrations / TFS</fullName>
                    <isActive>false</isActive>
                    <label>Integrations / TFS</label>
                </value>
                <value>
                    <fullName>Integrations / Tosca Connect</fullName>
                    <isActive>false</isActive>
                    <label>Integrations / Tosca Connect</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrator_Names__c</fullName>
        <label>Customer Preferred Integrators</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>BearingPoint</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>CGI</fullName>
                </value>
                <value>
                    <fullName>Cigniti</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>Computest</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>EPAM</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Gallop</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>LogicaCMG</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Northrop Grumman</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Praegus</fullName>
                </value>
                <value>
                    <fullName>SAIC</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Siemens Business Services</fullName>
                </value>
                <value>
                    <fullName>SLK</fullName>
                </value>
                <value>
                    <fullName>SQS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <inlineHelpText>This information should be provided by PreSales and PoC team. It describes the different technologies the customer is interested in.</inlineHelpText>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interest</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LIC_FYM_mgmt_commit__c</fullName>
        <label>ACV mgmt commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Stage_before_Closed_Lost__c</fullName>
        <label>Last Stage before Closed Lost</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Age_Hours__c</fullName>
        <formula>(Opportunity_Created_Date_Time__c -  Lead_Created_Date_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <label>Lead Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>Choose the license type for the opportunity</description>
        <inlineHelpText>Choose the license type for the opportunity</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Perpetual</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mgmt_Expected_NACV_in_Euro__c</fullName>
        <description>Expected value for the deal
Request by noefi 17.01.2018</description>
        <label>Mgmt Expected NACV in Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Licenses__c</fullName>
        <label>No of Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Normalized_ACVMgmtCommit__c</fullName>
        <formula>IF( ISPICKVAL( License_Type__c , &apos;Perpetual&apos;) ,LIC_FYM_mgmt_commit__c*0.5 , LIC_FYM_mgmt_commit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Normalized Annual Contract  value Management Commit</inlineHelpText>
        <label>NACV Mgmt Commit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Normalized_ACV__c</fullName>
        <formula>IF( ISPICKVAL( License_Type__c , &apos;Perpetual&apos;) ,  Annual_contract_value__c * 0.5, Annual_contract_value__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Normalized Annual contract value</inlineHelpText>
        <label>NACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Normalized_ACVinEuro__c</fullName>
        <formula>IF( ISPICKVAL( License_Type__c , &apos;Perpetual&apos;) ,  ACV_in_Euro__c *0.5,  ACV_in_Euro__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NACV in Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Now_Available__c</fullName>
        <label>System Integrator Partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accenture</fullName>
                </value>
                <value>
                    <fullName>Ameritas</fullName>
                </value>
                <value>
                    <fullName>Atos Origin</fullName>
                </value>
                <value>
                    <fullName>BearingPoint</fullName>
                </value>
                <value>
                    <fullName>Bloomspire</fullName>
                </value>
                <value>
                    <fullName>Capgemini</fullName>
                </value>
                <value>
                    <fullName>Cigniti</fullName>
                </value>
                <value>
                    <fullName>Cognizant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Deloitte</fullName>
                </value>
                <value>
                    <fullName>DX Solutions</fullName>
                </value>
                <value>
                    <fullName>EDS</fullName>
                </value>
                <value>
                    <fullName>Fujitsu</fullName>
                </value>
                <value>
                    <fullName>Gallop</fullName>
                </value>
                <value>
                    <fullName>HCL</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>IBM Global Services</fullName>
                </value>
                <value>
                    <fullName>Infosys</fullName>
                </value>
                <value>
                    <fullName>K.J. Ross Associates</fullName>
                </value>
                <value>
                    <fullName>L&amp;T Consulting</fullName>
                </value>
                <value>
                    <fullName>Larsen &amp; Toubro Infotech</fullName>
                </value>
                <value>
                    <fullName>Lockheed Martin</fullName>
                </value>
                <value>
                    <fullName>LogicaCMG</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>MindTree</fullName>
                </value>
                <value>
                    <fullName>Ness Consulting</fullName>
                </value>
                <value>
                    <fullName>Northrop Grumman</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>Planit Software Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_accepted_quotes__c</fullName>
        <description>Shows the number of accepted quotes under this Opportunity</description>
        <inlineHelpText>Shows the number of accepted quotes under this Opportunity</inlineHelpText>
        <label>Number of accepted quotes</label>
        <summaryFilterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_approved_quotes__c</fullName>
        <description>count of the approved quotes under this opportunity</description>
        <inlineHelpText>count of the approved quotes under this opportunity</inlineHelpText>
        <label>Number of approved quotes</label>
        <summaryFilterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityId18digit__c</fullName>
        <description>This is an admin field used for implementations and can be used for reports as well</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an admin field used for implementations and can be used for reports as well</inlineHelpText>
        <label>OpportunityId18digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age_Hours__c</fullName>
        <formula>IF(IsClosed, DATETIMEVALUE(CloseDate)- CreatedDate, NOW()-CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opportunity_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If look up is filled, a Sales Overlay is integrated into this Opportunity deal</description>
        <inlineHelpText>Fill out if Specialty Sales Resource is also working on this particular deal</inlineHelpText>
        <label>Opportunity Driver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <description>Displays the value based on the Reporting Group the user is from.</description>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Sourced</fullName>
                </value>
                <value>
                    <fullName>Partner Sourced</fullName>
                </value>
                <value>
                    <fullName>Marketing Sourced</fullName>
                </value>
                <value>
                    <fullName>Admin/Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Others_Applications__c</fullName>
        <inlineHelpText>Please specify ‘Others – Applications’. Indicate the Application missing in the picklist</inlineHelpText>
        <label>Others – Applications</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others_Integrations__c</fullName>
        <inlineHelpText>Please specify ‘Others – Integrations’. Indicate the Integration missing in the picklist</inlineHelpText>
        <label>Others – Integrations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others_Technologies__c</fullName>
        <inlineHelpText>Please specify ‘Others – Technologies’. Indicate the Technology missing in the picklist</inlineHelpText>
        <label>Others – Technologies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Others_ToscaProducts__c</fullName>
        <inlineHelpText>Please specify ‘Others_ToscaProducts’. Indicate the ToscaProduct missing in the picklist</inlineHelpText>
        <label>Others – ToscaProducts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>